--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-currency-conversion-service.zip
-currency-exchange-service.zip
-limits-service.zip
-netflix-eureka-naming-server.zip
-netflix-zuul-api-gateway-server.zip
-spring-cloud-config-server.zip
+./currency-conversion-service.zip
+./currency-exchange-service.zip
+./limits-service.zip
+./netflix-eureka-naming-server.zip
+./netflix-zuul-api-gateway-server.zip
+./spring-cloud-config-server.zip
 ./currency-conversion-service/target
 ./currency-exchange-service/target
 ./limits-service/target
